# TC2004B-Jenaro

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: info.txt
notebooks/: analisis_titanic.ipynb  semana1_practica_iris.ipynb
notebooks/modulo 1/: actividad_16_2_2026.ipynb
notebooks/modulo 2/: decision_tree_practica.ipynb  flower_dataset_analisis.ipynb
notebooks/modulo1/: DeepLearning_actividad.ipynb  actividad_16_2_2026.ipynb  evaluacion_de_modelos_actividad.ipynb
notebooks/modulo2/: decision_tree_practica.ipynb  kmeans_clustering_practica.ipynb  knn_practica.ipynb  pca_practica.ipynb  prueba.ipynb  random_forest_practica.ipynb  supervised_machine_learning_final_activity.ipynb  svm_practica.ipynb
