[project]
name = "tc2004b-jenaro"
version = "0.1.0"
description = "TC2004B course of IDM 4th semester @ Tecnologico de Monterrey (feb-mar)"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "imbalanced-learn==0.14.1",
    "jupyter==1.1.1",
    "kneed==0.8.5",
    "numpy==2.3.1",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "plotly==6.5.2",
    "qtconsole==5.7.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "statsmodels==0.14.6",
    "torch==2.5.1",
    "xlrd==2.0.2",
]
